push to GitHub package registry
Signed-off-by: Brady Todhunter <bradyt@anchore.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,7 @@ jobs:
     - name: Deploy
       if: github.ref == 'refs/heads/master'
       run: |
-        echo docker push $IMAGE
+        GPR_REPO=docker.pkg.github.com/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')/production:${{ github.sha }}
+        docker tag $IMAGE $GPR_REPO
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} docker.pkg.github.com --password-stdin
+        docker push $GPR_REPO
